@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.6</version>
+        <version>3.3.10</version>
         <relativePath/>
     </parent>
 
@@ -16,15 +16,6 @@
         Domain Driven Design implemented in Enterprise Java.
     </description>
     <url>http://dddsample.sourceforge.net</url>
-
-    <distributionManagement>
-        <site>
-            <id>sf</id>
-            <url>scp://shell.sf.net/home/groups/d/dd/dddsample/htdocs/preview</url>
-        </site>
-    </distributionManagement>
-
-    <ciManagement/>
 
     <developers>
         <developer>
@@ -83,6 +74,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <commons-io.version>2.18.0</commons-io.version>
     </properties>
 
     <build>
@@ -94,10 +86,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
-                </configuration>
-                <version>3.2.5</version>
+                <version>3.5.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.21.0</version>
             </plugin>
         </plugins>
     </build>
@@ -130,7 +129,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.18.0</version>
+            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -193,8 +192,9 @@
             </plugin>
             <!-- Test coverage -->
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
             </plugin>
             <!-- CheckStyle report -->
             <plugin>
